Fix test smells for /codex/moderate